# hid_tool

./: .gitignore  .gitmodules  .pubignore  CHANGELOG.md  CHANGELOG_cn.md  LICENSE  README.md  README_cn.md  analysis_options.yaml  pubspec.yaml
.claude/: settings.local.json
android/: build.gradle  settings.gradle
android/src/main/: AndroidManifest.xml
android/src/main/kotlin/com/github/ardwang/hid_tool/: HidToolPlugin.kt
android/src/main/kotlin/com/github/vinsfortunato/hid_tool/: HidToolPlugin.kt
android/src/test/kotlin/com/github/ardwang/hid_tool/: HidToolPluginTest.kt
android/src/test/kotlin/com/github/vinsfortunato/hid_tool/: HidToolPluginTest.kt
example/: README.md  pubspec.yaml
example/android/app/: build.gradle
example/android/app/src/main/: AndroidManifest.xml
example/android/app/src/main/kotlin/com/github/ardwang/hid_tool_example/: MainActivity.kt
example/android/app/src/main/kotlin/com/github/vinsfortunato/hid_tool_example/: MainActivity.kt
example/ios/Runner/: Info.plist
example/ios/RunnerTests/: RunnerTests.swift
example/lib/: main.dart
example/linux/: CMakeLists.txt  my_application.cc
example/linux/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
example/macos/Flutter/: GeneratedPluginRegistrant.swift
example/macos/Runner/Configs/: AppInfo.xcconfig
example/macos/RunnerTests/: RunnerTests.swift
example/web/: index.html  manifest.json
example/windows/: CMakeLists.txt
example/windows/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
example/windows/runner/: Runner.rc  main.cpp
lib/: hid_tool.dart
lib/src/: device_filter.dart  empty_platform.dart  hid_device.dart  hid_device_events.dart  hid_platform_interface.dart  platform_imports.dart
lib/src/android/: hid_android.dart  hid_android_stub.dart  hid_device_android.dart
lib/src/desktop/: extensions.dart  hid_desktop.dart  hid_desktop_stub.dart  hid_device_desktop.dart  hid_report_descriptor_parser.dart  hidapi_ffi.dart
lib/src/web/: hid_stub.dart  hid_tool_web_plugin.dart  hid_web.dart  hid_web_stub.dart
lib/src/web/interop/: js_interop.dart
lib/src/web/types/: collection_info.dart  device_filter.dart  report_info.dart  report_item.dart  request_options.dart  unit_system.dart
lib/src/web/utils/: collection_utils.dart
linux/: CMakeLists.txt  hid_tool_plugin.cc  hid_tool_plugin_private.h
linux/include/hid_tool/: hid_tool_plugin.h
macos/: hid_tool.podspec
macos/Classes/: Hid4flutterPlugin.swift
test/: hid_tool_test.dart
windows/: CMakeLists.txt  hid_tool_plugin.cpp  hid_tool_plugin.h  hid_tool_plugin_c_api.cpp
windows/include/hid_tool/: hid_tool_plugin_c_api.h
